--- a/prod/sass/partial/_paginador.scss
+++ b/prod/sass/partial/_paginador.scss
@@ -1,6 +1,6 @@
 .pagination {
 	@include gridle(12);
-	float:right;
+	@include gridle_float(right);
 	margin:{bottom:30px !important;}
 	height: auto;
 	.page-numbers {
