--- a/prod/sass/partial/_sidebar.scss
+++ b/prod/sass/partial/_sidebar.scss
@@ -8,7 +8,6 @@
 		@extend .no-margins;
 		@include gridle(12);
 		@include gridle_clear(right);
-		float: right;
-
+		@include gridle_float(right);
 	}
 }
