--- a/prod/sass/partial/_single.scss
+++ b/prod/sass/partial/_single.scss
@@ -15,9 +15,9 @@
 				h1 {
 					margin:20px 0 0 0;
 					@include gridle_state(phoness-min){
-						  	margin: 28px 0 3px 0;
-							line-height: 24px;
-							}
+					  	margin:{top:28;left:3px;}
+						line-height: 24px;
+					}
 					a {
 					color:#000;
 						@include gridle_state(phoness-min){
@@ -28,17 +28,15 @@
 				.tags{
 					@include gridle(11,desktopess);
 					@include gridle(10,notebook-min);
-					@include gridle_state(tabless-min){
-						float:none;
-					}
+					@include gridle_float(none, tabless-min);
 					@extend .no-margins;
 					@extend .no-paddings;
 					display: block;
 					color:#fff;
-					list-style: none;
+					list:{style: none;}
 					li{
 						padding:2px 5px;
-						margin: 2px 2px 0 0;
+						margin:{top:2px;right:2px;}
 						display: inline-block;
 						background:{color:$first_color;}
 						a{
@@ -51,25 +49,27 @@
 			}	
 			.img-post{
 				height: 500px;
-				background-repeat: no-repeat;
-				background-size: cover;
-				margin-top: 2%;
+				background:{repeat: no-repeat;size: cover;}
+				margin:{top: 2%;}
 				position: relative;
 				@include gridle_state(phoness-min){
-						height:200px;
-						}
+					height:200px;
+				}
 				.date {
 					background:{color:$second_color_1;}
-					border-radius: 50%;
+					@include border-top-radius(50%);
+					@include border-right-radius(50%);
+					@include border-bottom-radius(50%);
+					@include border-left-radius(50%);
 					color: #fff;
 					height: 65px;
 					right: 0;
-					text-align: center;
+					@extend .text-center;
 					top: -35px;
 					position: relative;
 					padding: 5px;
 					width: 65px;
-					float: right;
+					@include gridle_float(right);
 					@include gridle_state(phoness-min){
 						height: 40px;
 						width: 40px;
@@ -78,7 +78,7 @@
 					i {
 						@extend.text-center;
 						display: block;
-						font-size: 30px;
+						font:{size: 30px;}
 						margin: 5px 0;
 						@include gridle_state(phoness-min) {
 							font:{size:20px;}
@@ -137,13 +137,13 @@
 						position: relative;
 						display: inline-block;
 						.author {
-							padding: 10px 0 0 0;
+							padding:{top:10px;}
 							display: table-cell;
 							a {	
-							color:$third_color_2;
-							font:{style:italic;}
-							@include gridle_state(phoness-min){
-								font:{size:14px;}
+								color:$third_color_2;
+								font:{style:italic;}
+								@include gridle_state(phoness-min){
+									font:{size:14px;}
 								}
 							}
 						}
