--- a/prod/sass/partial/_footer.scss
+++ b/prod/sass/partial/_footer.scss
@@ -37,12 +37,12 @@
 					@include gridle(12,phoness-min);
 					@include gridle(4,tabless-min);
 					@include gridle_clear(both); 
-					float: center;
+					@include gridle_float(center);
 					margin: 0 auto;
 					display: block;
 				}
 				.nav {
-					@extend .text-center;
+					@extend .text-center; 
 					display:block;
 					margin: 0 auto;
 					@include gridle_state(phoness-min){
@@ -59,7 +59,7 @@
 							a {
 								color: #000;
 								font:{size:11px;} 
-								margin-left: 42px;
+								margin:{left: 42px;}
 								text:{transform:uppercase;} 
 								font:{weight:bold;} 
 							}	
@@ -77,7 +77,7 @@
 				}
 				.newsletter {
 					@include gridle(12);
-					padding-bottom: 20px;
+					padding:{bottom: 20px;}
 					@include gridle_state(phoness-min){
 						padding:{bottom:0;}
 					}
@@ -143,8 +143,8 @@
 							float: none;
 							a {
 								@extend .text-center;
+								@extend .border-radius;
 								background: {color:$second_color}
-								border-radius: 50%;
 								display: table;
 								height: 40px;
 								width: 40px;
@@ -196,7 +196,7 @@
 						a {
 							color: #000;
 							font:{size:11px;} 
-							margin-left: 20px;
+							margin:{left:20px;} 
 							text:{transform:uppercase;} 
 							font:{weight:bold;} 
 						}
@@ -207,7 +207,7 @@
 				@extend .no-paddings;
 				color:$third_color_2;
 				text:{transform:uppercase;} 
-				margin: 20px 0 5px 0;
+				margin:{top:20px; bottom:5px;}
 				@include gridle_state(phoness-min){
 					margin:{top:0;}
 				}
@@ -229,8 +229,8 @@
 			@include gridle(12);
 			padding: 20px 0;
 			img {
-				margin: 0 30px 0 0;
-				border: {radius:5px;}
+				margin:{right: 30px;}
+				border:{radius:5px;}
 			}
 		}	
 	}
