--- a/prod/sass/partial/_queries.scss
+++ b/prod/sass/partial/_queries.scss
@@ -1,6 +1,7 @@
 //MEDIA QUERIES
 $bp-smalless : 320px;
 $bp-meddies : 480px;
+$bp-md  : 600px;
 $bp-large : 800px;
 $bp-largess : 1024px;
 $bp-xl : 1140px;
@@ -13,6 +14,10 @@ $bp-xxl : 1440px;
 
 @include gridle_register_state( phoness, (
    max-width : $bp-large
+) );
+
+@include gridle_register_state( tabless-md, (
+    (min-width : $bp-md) and (max-width:$bp-largess)
 ) );
 
 @include gridle_register_state( tabless-min, (
