--- a/prod/sass/partial/_single.scss
+++ b/prod/sass/partial/_single.scss
@@ -13,7 +13,7 @@
 			@include gridle(12,phoness-min);
 			.content-title {
 				h1 {
-					margin:20px 0 0 0;
+					margin:{top:0;}
 					@include gridle_state(phoness-min){
 					  	margin:{top:28;left:3px;}
 						line-height: 24px;
@@ -48,10 +48,10 @@
 				}
 			}	
 			.img-post{
-				height: 500px;
+				height:500px;
 				background:{repeat: no-repeat;size: cover;}
-				margin:{top: 2%;}
-				position: relative;
+				margin:{top:2%;}
+				position:relative;
 				@include gridle_state(phoness-min){
 					height:200px;
 				}
@@ -79,7 +79,7 @@
 						@extend.text-center;
 						display: block;
 						font:{size: 30px;}
-						margin: 5px 0;
+						margin:5px 0;
 						@include gridle_state(phoness-min) {
 							font:{size:20px;}
 							margin:{top:2px; bottom:4px;}
@@ -129,7 +129,7 @@
 							@extend .no-paddings;
 							width: 40px;
 							height: 40px;
-							border-radius: 20px;
+							border-radius:50%;
 						}
 					}
 					.name-author{
