--- a/prod/sass/partial/_footer.scss
+++ b/prod/sass/partial/_footer.scss
@@ -15,14 +15,14 @@
 		background:{color:$third_color;}
 		.container-footer {
 			@include gridle(8,desktopess);
-			@include gridle(12,phoness-min notebook-min);
+			@include gridle(12,phoness-min notebook-min tabless-min tabless-md);
 			@include gridle_push(2,desktopess);
 			@extend .text-center;
 			@extend .no-margins;
 			display: block;
 			margin: 0 auto;
 			position: relative;
-			@include gridle_state(phoness-min){
+			@include gridle_state(phoness-min tabless-md notebook-min){
 				margin: 0;
 				left: 0;
 			}
