--- a/prod/sass/partial/_nav-top.scss
+++ b/prod/sass/partial/_nav-top.scss
@@ -14,11 +14,14 @@
 	}
 	.top-social {
 		@include gridle(2,desktopess notebook-min);
-		@include gridle_push(2,desktopess);
+		@include gridle_push(2,desktopess notebook-min);
 		@include gridle_clear(left);
-		color:$third_color_2;
 		@include gridle(3,phoness-min tabless-md);
-		@include gridle_state(phoness-min tabless-md){
+		color:$third_color_2;
+		@include gridle_state(notebook-min){
+			left:4%;
+		}
+		@include gridle_state(phoness-min tabless-md notebook-){
 			left:0;
 			padding:0;
 		}
@@ -66,7 +69,7 @@
 		}
 	}
 	.nav-mobile {
-		@include gridle_state(desktopess notebook-min tabless-min){
+		@include gridle_state(desktopess notebook-min tabless-min tabless-md){
 			display:none;
 		}
 		@include gridle(6,phoness-min);
@@ -96,7 +99,8 @@
 			@extend .no-paddings;
 			@include gridle(4,desktopess);
 			@include gridle(6,notebook-min);
-			@include gridle_push(4,desktopess notebook-min tabless-md);
+			@include gridle_push(4,desktopess notebook-min);
+			@include gridle(5,tabless-md);
 			@include gridle(1,phoness-min);
 			@include gridle_state(phoness-min){
 				left:0;
@@ -107,7 +111,7 @@
 			@include gridle(12,desktopess notebook-min tabless-min);
 			.search-input {
 				@include gridle(11,desktopess notebook-min tabless-min);
-				@include gridle(8,tabless-md);
+				@include gridle(10,tabless-md);
 				background: none;
 				border:0;
 				border-bottom:1px solid $third_color_2;
@@ -132,7 +136,7 @@
 			.search-submit {
 				@extend .text-left;
 				@include gridle(1, desktopess notebook-min tabless-min);
-				@include gridle(4,tabless-md);
+				@include gridle(2,tabless-md);
 				color:$third_color_2;
 				font:{size:22px;}
 				padding:{top:5px;}
@@ -177,8 +181,8 @@
 		@include gridle(12);
 		background:{color:$third_color} ;
 		color:#666;
-		padding:{top:45px;}
-		height:0;
+		padding:{top:45px;bottom:30px;}
+		height:auto;
 		overflow: hidden;
 		top:0;
 		ul{
