--- a/prod/sass/partial/_single.scss
+++ b/prod/sass/partial/_single.scss
@@ -52,8 +52,8 @@
 			}	
 			.img-post{
 				height:500px;
-				background:{repeat: no-repeat;size: cover;}
-				margin:{top:2%;}
+				background:{repeat:no-repeat;size:cover;position:center}
+				margin:{top:3%;}
 				position:relative;
 				@include gridle_state(phoness-min){
 					height:200px;
@@ -110,10 +110,15 @@
 					margin:20px 0;
 					font:{family:$second_font;}
 					color:#606061;
+					line-height: 
 					img {
 					  	border: 0;
 					  	width: 100%;
 					  	height: auto;
+					}
+					@include gridle_state(desktopess){
+					  	font:{size:16px;} 
+						line-height:24px;
 					}
 				}
 				.content-author {
