--- a/prod/sass/partial/_footer.scss
+++ b/prod/sass/partial/_footer.scss
@@ -94,6 +94,10 @@
 						outline:none !important; 
 						background: none;
 						padding:10px 5px;
+						@include border-top-radius(0);
+						@include border-right-radius(0);
+						@include border-bottom-radius(0);
+						@include border-left-radius(0);
 						@include gridle_state(notebook-min){
 							padding:9px 5px;
 						}
@@ -180,9 +184,13 @@
 					}
 					li {
 						display: inline-block;
+						border-right: 1px solid #000;
+						padding: 0 10px;
+						margin:5px 0;
 						@include gridle_state(phoness-min){
-							width: 100%;
 							text:{align:center;}
+							border:0;
+							width: 100%;
 						}
 						&:first-child {
 							padding: {right:20px;}
@@ -193,16 +201,20 @@
 								margin:0;
 							}
 						}
+						&:last-child {
+							border:0;
+							margin:{top:0;}
+						}
 						a {
 							color: #000;
 							font:{size:11px;} 
-							margin:{left:20px;} 
+							margin:0 20px; 
 							text:{transform:uppercase;} 
 							font:{weight:bold;} 
 						}
 					}
 				}
-			}
+			} 
 			h4 {
 				@extend .no-paddings;
 				color:$third_color_2;
