--- a/prod/sass/partial/_loop-principal.scss
+++ b/prod/sass/partial/_loop-principal.scss
@@ -62,6 +62,9 @@
 						padding: 5px;
 						background:{color:$third_color;}
 						cursor: pointer;
+						a{
+							color:$third_color_2;
+						}
 					}
 				}
 				.principal-post {
