--- a/prod/sass/partial/_nav-top.scss
+++ b/prod/sass/partial/_nav-top.scss
@@ -89,7 +89,8 @@
 				width: 74%;
 				a{
 					svg{
-						max-width: 120px
+						max-width: 120px;
+						max-height: 40px;
 					}
 				}
 			}
@@ -186,6 +187,7 @@
 		height:auto;
 		overflow: hidden;
 		top:0;
+		position: relative;
 		ul{
 			padding:{top:10px; left:15px;}
 			li {
@@ -222,30 +224,33 @@
 			}
 			.search-submit {
 				@include gridle(2); 
-					@extend .no-paddings;
-					@extend .no-margins;
-					@include gridle_clear(none);
-					background: none;
-					border: 0;
-					color:#fff;
-					height: 28px;
-					font:{size:21px;}
-					background:{color:$third_color_2;}
+				@extend .no-paddings;
+				@extend .no-margins;
+				@include gridle_clear(none);
+				background: none;
+				border: 0;
+				color:#fff;
+				height: 28px;
+				font:{size:21px;}
+				background:{color:$third_color_2;}
 			}
 		}
 	}
 	.pestana {
+		position: relative;
 		width: 80px;
 		height: auto;
-		margin: 0 auto;
 		cursor: pointer;
-		margin:{top:-5px;}
+		margin:{top:-5px;left:auto;right:auto;}
 		top:-5px;
 		@include gridle_state(tabless-min){
 			width: 110px;
 		}
 		@include gridle_state(phoness-min){
 			width: 90px;
+		}
+		svg{
+			max-height: 40px;
 		}
 	}
 }
