--- a/prod/sass/partial/_footer.scss
+++ b/prod/sass/partial/_footer.scss
@@ -93,17 +93,17 @@
 						padding:{left:0;right:0;}
 					}
 					#wysija-2{
+						h3{
+							@extend .no-paddings;
+							color:$third_color_2;
+							text:{transform:uppercase;} 
+							margin:{top:20px; bottom:5px;}
+							@include gridle_state(phoness-min){
+								margin:{top:0;}
+							}
+						}
 						.widget_wysija_cont{
 							.widget_wysija{
-								h3{
-									@extend .no-paddings;
-									color:$third_color_2 !important;
-									text:{transform:uppercase;} 
-									margin:{top:20px; bottom:5px;}
-									@include gridle_state(phoness-min){
-										margin:{top:0;}
-									}
-								}
 								.wysija-paragraph{
 									label{
 										@include gridle_hide();
