--- a/prod/sass/partial/_footer.scss
+++ b/prod/sass/partial/_footer.scss
@@ -205,8 +205,6 @@
 					@extend .no-margins;
 					@extend .no-paddings;
 					@include gridle_state(phoness-min){
-						margin:0;
-						padding: 0;
 						width: 100%;
 					}
 					li {
@@ -214,10 +212,11 @@
 						border-right: 1px solid #000;
 						padding: 0 10px;
 						margin:5px 0;
+						@include gridle(12,phoness);
 						@include gridle_state(phoness-min){
 							text:{align:center;}
 							border:0;
-							width: 100%;
+							padding:0;
 						}
 						&:first-child {
 							padding: {right:20px;}
